# pf-scout-bot

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bot/: README.md  package-lock.json  package.json  tsconfig.json
bot/src/: chain.ts  config.ts  index.ts  rate-limit.ts  responder.ts  router.ts  scout-client.ts  session.ts  types.ts
deploy/: .env.example  install.sh  pf-scout-api.service  pf-scout-bot.service  pf-scout-enrichment.service  pf-scout-enrichment.timer
docs/: demo-session.md
enrichment/: __init__.py  config.py  cron.sh  external_prospects.py  leaderboard.py  refresh.py  relationships.py
scout-api/: Dockerfile  auth.py  config.py  main.py  models.py  requirements.txt  scout_client.py
scout-api/routes/: auth_tier.py  health.py  list_contacts.py  profile.py  search.py
