[project]
name = "pf-scout-bot"
version = "0.1.0"
description = "Conversational scout bot for Post Fiat Task Node contributor discovery"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (FastAPI uses this)
    "UP007",  # use X | Y for union — keep Optional for clarity
]

[tool.ruff.lint.per-file-ignores]
"scout-api/routes/*.py" = ["B008"]
"scout-api/main.py" = ["E402"]
